[package]
name    = "waltz"
version = "0.1.0"
edition = "2021"
description   = "Experimental actor framework"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/waltz"
repository    = "https://github.com/hseeberger/waltz"
documentation = "https://github.com/hseeberger/waltz"

[dependencies]
async-trait = "0"
futures     = "0"
lazy_static = "1"
thiserror   = "1"
tokio       = { version = "1", features = [ "full" ] }
tracing     = "0"
uuid        = { version = "1", features = [ "v7" ] }

[dev-dependencies]
anyhow             = "1"
tracing-subscriber = { version = "0", features = [ "env-filter", "json" ] }
